--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
       <aside class="sidebar" data-sidebar>
         <div class="sidebar-info">
           <figure class="avatar-box">
-            <img
+            <!-- <img
               src="./assets/images/my-avatar.png"
               alt="Richard hanrick"
               width="80"
-            />
+            /> -->
           </figure>
 
           <div class="info-content">
